# TSP

./: CMakeLists.txt  README.md  main.cpp  testMain.cpp
TSPLib/: ApproximationTSPAlgorithm.cpp  ApproximationTSPAlgorithm.h  CMakeLists.txt  Checker.cpp  Checker.h  HamiltonianTour.cpp  HamiltonianTour.h  KruskalMST.cpp  KruskalMST.h  TSPGraph.cpp  TSPGraph.h  TSPGraphMaker.cpp  TSPGraphMaker.h  TSPGraphReader.cpp  TSPGraphReader.h
samples/: grafo17.edges  grafo26.edges  grafo5.edges
samples/contollare/: att48.edges  eil101.edges  gr96.edges
samples/randomGraphs/: grafo100  grafo150  grafo200  grafo25  grafo300  grafo400  grafo50  grafo75
samples/realGraph/: a280.edges  att48.edges  berlin52.edges  dantzig42.edges  eil51.edges  eil76.edges  gr120.edges  gr24.edges  gr48.edges  kroA100.edges  kroC100.edges  kroD100.edges  lin105.edges  p15.edges  pa561.edges  pcb442.edges  ulysses16.edges
